[package]
name = "ferrex-player"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "Cross-platform desktop player for Ferrex with a focus on performance, cutting edge features, and media compatibility"

[dependencies]
ferrex-core = { path = "../ferrex-core", default-features = false, features = ["rkyv"] }
ferrex-model = { path = "../ferrex-model", features = ["serde", "rkyv", "chrono"] }
ferrex-contracts = { path = "../ferrex-contracts", features = ["serde", "rkyv", "chrono"] }

# Iced
iced = { git = "https://github.com/Lowband21/iced-ferrex.git", default-features = false, features = [
  "tokio",
  "image",
  "canvas",
  "advanced",
  "wgpu",
  "web-colors",
  "batch",
  #"lazy",
] }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrex.git", features = [
  "image",
  "batch",
] }

iced_aw = { git = "https://github.com/Lowband21/iced_aw_ferrex.git", default-features = false, features = [
  "menu",
] }

# Icons
lucide-icons = { git = "https://github.com/Lowband21/lucide-icons-iced-0.14.git", features = [
  "iced",
] }

# Unified video abstraction based on subwave
subwave_unified = { git = "https://github.com/Lowband21/Subwave.git" }
subwave_core = { git = "https://github.com/Lowband21/Subwave.git" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Concurrency utilities
once_cell = "^1.21"

# Serialization
serde.workspace = true
serde_json.workspace = true
rkyv = { workspace = true }

# HTTP client for media server
reqwest.workspace = true
reqwest-eventsource = "^0.6"
eventsource-stream = "^0.2"
futures.workspace = true

# URL handling
url = "^2"
urlencoding = "^2"

# Logging
log = { workspace = true }
env_logger = "^0.11"

# File dialogs
#rfd = "0.13"

# Regular expressions
regex.workspace = true

# Image handling for thumbnails
image.workspace = true

# Directories
## Pretty sure these are redundant
dirs = "^6"
directories = "^6"

# Time handling
chrono.workspace = true

# Lazy statics for profiling
lazy_static = "^1.5"

# Error handling
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true

# GPU utilities
bytemuck = { version = "^1.23", features = ["derive"] }

# Advanced caching and concurrency
dashmap.workspace = true
priority-queue = "^2.5.0"
rand.workspace = true
base64 = "^0.22"
ed25519-dalek = { version = "2", default-features = false, features = [
  "rand_core",
] }
getrandom = "^0.2"
num_cpus = "^1"
rand_core = "^0.6"

# Encryption for local auth storage
aes-gcm.workspace = true
sha2.workspace = true
hkdf = "^0.12"

# JWT parsing for token validation
jsonwebtoken = { workspace = true }
argon2.workspace = true

# Hardware fingerprinting
sysinfo = "^0.37"
mac_address = "^1.1"

# Memory zeroization for secure credentials
zeroize.workspace = true
tempfile.workspace = true

# Performance profiling (feature-gated)
profiling = { version = "^1.0", optional = true }
puffin = { version = "^0.19", optional = true }
puffin_http = { version = "^0.16", optional = true }
tracy-client = { version = "^0.18", default-features = false, optional = true }
hdrhistogram = { version = "^7.5", optional = true }
parking_lot = { version = "^0.12" }
memory-stats = { version = "^1.2", optional = true }
yoke = "^0.8"

[features]
default = []
iced_tester = ["iced/tester"]
hot = ["iced/hot"]
demo = ["ferrex-core/demo"]

# Optional: turn on additional iced_aw widgets used for UI polish
# (kept off by default to minimize compile time and risk).
aw-polish = [
  "iced_aw/drop_down",
  "iced_aw/spinner",
  "iced_aw/selection_list",
  "iced_aw/typed_input",
  "iced_aw/number_input",
]

profile-with-puffin = [
  "dep:profiling",
  "profiling/profile-with-puffin",
  "dep:puffin",
  "dep:puffin_http",
]
profile-with-tracy = [
  "dep:profiling",
  #"profiling/profile-with-tracy",
  #"dep:tracy-client",
]
profile-with-tracing = ["dep:profiling"] #"profiling/profile-with-tracing"]

profiling-stats = ["dep:hdrhistogram"]

[dev-dependencies]
# Testing framework
rand.workspace = true
#iced = { git = "https://github.com/Lowband21/iced-ferrex.git", features = [
#  "debug",
#] }
iced_test = { git = "https://github.com/Lowband21/iced-ferrex.git" }

# Performance benchmarking
# criterion = { version = "^0.7", features = ["html_reports"] }

#[[bench]]
#name = "grid_rendering_bench"
#harness = false

# [patch."https://github.com/Lowband21/iced-ferrex.git"]
# iced = { path = "../../iced_ferrex" }
# iced_core = { path = "../../iced_ferrex/core" }
# iced_graphics = { path = "../../iced_ferrex/graphics" }
# iced_renderer = { path = "../../iced_ferrex/renderer" }
# iced_runtime = { path = "../../iced_ferrex/runtime" }
# iced_widget = { path = "../../iced_ferrex/widget" }
# iced_wgpu = { path = "../../iced_ferrex/wgpu" }
# iced_winit = { path = "../../iced_ferrex/winit" }
