[package]
name = "ferrex-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "High-performance media server with real-time transcoding, streaming, and synchronized playback support"

[lints]
workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time handling
chrono.workspace = true

# HTTP/Web
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower.workspace = true
tower-http.workspace = true

# Database
surrealdb.workspace = true
sqlx.workspace = true
redis.workspace = true

# UUID generation
uuid.workspace = true

# Configuration
config.workspace = true
dotenv = "0.15"
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP Client
reqwest.workspace = true

# Async utilities
async-stream = "0.3"
futures-util = "0.3"
futures = "0.3"
async-trait = "0.1"

# Media processing
ffmpeg-next.workspace = true
image = "0.24"

# Regex
regex.workspace = true

# URL encoding/decoding
urlencoding = "2.1"

# WebSocket support
tokio-tungstenite = "0.20"
dashmap = "5.5"

# Process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# Authentication
jsonwebtoken.workspace = true
argon2.workspace = true
axum-extra = { workspace = true, features = ["typed-header"] }

# Cryptography
sha2.workspace = true
base64 = "0.22"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
rand = "0.8"
ring = "0.17.14"

# Internal dependencies
ferrex-core = { path = "../ferrex-core" }

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
hyper = "1.6"
axum-test = "17.3"
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true