[package]
name = "ferrex-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "High-performance media server with real-time transcoding, streaming, and synchronized playback support"

[lints]
workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
tokio-util.workspace = true
httpdate = "^1.0"

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "^0.9"
rkyv.workspace = true

# Concurrency
rayon.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time handling
chrono.workspace = true

# HTTP/Web
axum.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
surrealdb.workspace = true
sqlx.workspace = true
redis.workspace = true

# UUID generation
uuid.workspace = true

# Configuration
config.workspace = true
dotenv = "^0.15"
clap = { version = "^4.5", features = ["derive", "env"] }

# HTTP Client
reqwest.workspace = true

# Async utilities
async-stream.workspace = true
futures-util.workspace = true
futures.workspace = true
async-trait.workspace = true

tokio-stream.workspace = true
# Media processing
ffmpeg-next.workspace = true
image.workspace = true

# Regex
regex.workspace = true

# URL encoding/decoding
urlencoding = "2.1"

# WebSocket support
#tokio-tungstenite = "0.20"

dashmap.workspace = true
num-traits = "0.2.19"
blake3 = "1.8.2"
parking_lot = "0.12.4"
once_cell = "1.21.3"

# Process management
[target.'cfg(unix)'.dependencies]
nix = { version = "^0.30", features = ["signal", "process"] }

# Authentication
jsonwebtoken.workspace = true
argon2.workspace = true
#axum-extra = { workspace = true, features = ["typed-header"] }

# Cryptography
sha2.workspace = true
base64.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
rand.workspace = true
ring.workspace = true

# Internal dependencies
ferrex-core = { path = "../ferrex-core" }

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
hyper = "^1.7"
axum-test = "^18"
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true

[features]
# Enable long-running external end-to-end HTTP tests
e2e = []
demo = ["ferrex-core/demo"]
