[package]
name = "ferrex-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "High-performance media server with real-time transcoding, streaming, and synchronized playback support"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "allow"
private_doc_tests = "warn"
invalid_codeblock_attributes = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"

[lints.rust]
# Server is a bin crate with extensive surface; allow during 0.1.0-alpha
missing_docs = "allow"
missing_debug_implementations = "warn"

[dependencies]
# Async runtime
tokio.workspace = true
tokio-util.workspace = true
httpdate = "^1.0"

# Serialization
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true

toml = { version = "^0.9", default-features = false, features = [
  "parse",
  "serde",
  "display",
] }

# Concurrency
rayon.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time handling
chrono.workspace = true

# HTTP/Web
axum.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true
redis.workspace = true

# UUID generation
uuid.workspace = true
url.workspace = true

clap = { version = "^4.5", default-features = false, features = [
  "std",
  "env",
  "derive",
] }
dialoguer = "^0.11"
humantime = "^2.1"

# Configuration
dotenvy = "^0.15.7"

# Consider for future use
# config.workspace = true

# HTTP Client
reqwest.workspace = true

# Async utilities
async-stream.workspace = true
futures-util.workspace = true
futures.workspace = true
async-trait.workspace = true

tokio-stream.workspace = true
# Media processing
ffmpeg-next.workspace = true
image.workspace = true

# Regex
regex.workspace = true

# WebSocket support
#tokio-tungstenite = "0.20"

dashmap.workspace = true
num-traits = "0.2.19"
parking_lot = "0.12.4"
once_cell = { version = "1.21.3", default-features = false }

# Add back later
# [target.'cfg(unix)'.dependencies]
# nix = { version = "^0.30", features = ["signal", "process"] }

# Authentication
argon2.workspace = true
#axum-extra = { workspace = true, features = ["typed-header"] }

# Cryptography
sha2.workspace = true
base64.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
rand.workspace = true

# Internal dependencies
ferrex-core = { path = "../ferrex-core" }
ferrex-config = { path = "../ferrex-config" }
ferrex-model = { path = "../ferrex-model", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true
hyper = "^1.7"
axum-test = "^18"
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
rcgen = "^0.12"

[features]
# Enable long-running external end-to-end HTTP tests
e2e = []
demo = ["ferrex-core/demo"]
