[package]
name = "rusty-media-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time handling
chrono.workspace = true

# HTTP/Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
surrealdb.workspace = true
sqlx.workspace = true
redis.workspace = true

# UUID generation
uuid.workspace = true

# Configuration
config.workspace = true
dotenv = "0.15"

# HTTP Client
reqwest.workspace = true

# Media processing
ffmpeg-next.workspace = true
image = "0.24"

# Internal dependencies
rusty-media-core = { path = "../core" }

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true